# Network-Threat-Detection

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  report.json
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
parse_pcap/: cli.py  utils.py  visualization.py
pcap_ioc/: cli.py  utils.py
tests/: test_utils.py
