[project]
name = "pcap_ioc"
version = "0.1.3"
description = "A Python package for extracting indicators of compromise (IOCs) from PCAP files."
authors = [
    { name = "Joshua Bone", email = "jbone.data@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GNU GENERAL PUBLIC LICENSE" }
keywords = ["pcap", "ioc", "security", "network"]
dependencies = [
    "pyshark >= 0.6", "requests>=2.32.5"
]

[project.scripts]
pcap-ioc = "pcap_ioc.cli:main"

[project.urls]
Homepage = "https://github.com/josh-bone/Network-Threat-Detection"
Repository = "https://github.com/josh-bone/Network-Threat-Detection"
Issues = "https://github.com/josh-bone/Network-Threat-Detection/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"